# MemesPy

./: .coveragerc  .env  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  OPENAI_POOL_README.md  README.md  REDIS_CACHE_ACTOR_SUMMARY.md  alembic.ini  basic_dspy_test.py  docker-compose.yml  docker-entrypoint.sh  dspy_minimal_test.py  dspy_test.py  dspy_test_simple.py  final_test.py  meme_generator.db  memes.db  metadata_test_summary.md  minimal_app.py  minimal_dspy_test.py  mypy.ini  openai_direct_test.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  ruff.toml  run_ci_checks.sh  setup.py  simple_dspy_test.py  simple_server.py  test_dspy.py  test_dspy_direct.py  test_dspy_fallback.py  test_openai.py  (+1 more)
.github/: PROJECT_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: create-environments.py  setup-environments.sh  setup-labels.sh
.github/workflows/: ci-cd-pipeline.yml  ci.yml  deploy.yml  project-automation.yml
.memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
alembic/: env.py
alembic/versions/: initial_migration.py
articles/: README.md  draft_v1_section1.md  draft_v1_section2.md  draft_v1_section3.md  draft_v1_section4.md  draft_v1_section5.md  draft_v1_section6.md  draft_v1_section7.md  final_article_dspy_meme_generator.md  outline.md  research_notes.md  section_1_research.md  section_2_research.md  section_3_research.md
deployment/: config.yml
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  DSPYMEMESTACK.MD  INCREMENTAL_ACTOR_PLAN.md  MONITORING.md  PIPELINE.md  PRIVACY_DESIGN.md  actor-architecture-design.md  api.md  deployment.md
docs/code_analysis/: README.md  api_design_analysis.md  dspy_integration_details.md  dspy_meme_gen_analysis.md
monitoring/grafana/dashboards/: meme_generation.json
monitoring/prometheus/: prometheus.yml
qa/: config.yml  requirements.txt
qa/results/: qa_results_20250327_175018.json
scripts/: fix_ci_cd.py  init_db.py  run_qa_checks.py  test_exif_metadata.py  test_gpt_image_1.py  test_image_gen.py  test_image_generator.py  test_imogen.py  test_metadata_system.py
src/: __init__.py
src/dspy_meme_gen/: __init__.py  cli.py  dependencies.py  exceptions.py  pipeline.py  system_setup.py  test_dspy.py
src/dspy_meme_gen.egg-info/: SOURCES.txt  top_level.txt
src/dspy_meme_gen/actors/: FLOW_CONTROL_README.md  README.md  README_cache_actor.md  __init__.py  adaptive_concurrency.py  base_messages.py  cache_actor.py  cache_usage_example.py  circuit_breaker.py  core.py  example_usage.py  flow_control.py  image_generator_actor.py  integration_example.py  mailbox.py  meme_generator_actor.py  messages.py  openai_pool.py  supervisor.py  text_generator_actor.py  usage_examples.py  work_stealing_pool.py
src/dspy_meme_gen/agents/: __init__.py  appropriateness.py  factuality.py  format_generator.py  format_selector.py  image_renderer.py  instruction_following.py  meme_generator.py  prompt_generator.py  refinement.py  router.py  scorer.py  scoring.py  trend_analyzer.py  trend_scanner.py  verification.py
src/dspy_meme_gen/api/: app.py  backup.py  dependencies.py  endpoints.py  final_app.py  health.py  integrated_app.py  main.py  simple_app.py
src/dspy_meme_gen/api/models/: requests.py
src/dspy_meme_gen/backup/: manager.py
src/dspy_meme_gen/cache/: base.py  cache_manager.py  decorators.py  factory.py  guideline_cache.py  redis.py
src/dspy_meme_gen/cli/: __init__.py  db.py  main.py
src/dspy_meme_gen/config/: config.py  database.py  settings.py
src/dspy_meme_gen/cqrs/: README.md  __init__.py  command_handlers.py  event_bus.py  event_store.py  events.py  projections.py
src/dspy_meme_gen/database/: connection.py  repository.py
src/dspy_meme_gen/dspy_modules/: __init__.py  image_generator.py  meme_predictor.py
src/dspy_meme_gen/examples/: __init__.py  cache_integration.py
src/dspy_meme_gen/exceptions/: backup.py  base.py  database.py  meme_specific.py  specific.py
src/dspy_meme_gen/health/: checks.py
src/dspy_meme_gen/middleware/: cache.py  error_handler.py
src/dspy_meme_gen/models/: base.py  connection.py  content_guidelines.py  database.py  meme.py  query_optimizer.py  repository.py  trending_topics.py
src/dspy_meme_gen/monitoring/: decorators.py  metrics.py
src/dspy_meme_gen/observability/: __init__.py  metrics.py  metrics_design.py  propagation.py  spans.py  telemetry.py  tracing.py
src/dspy_meme_gen/repositories/: meme_repository.py
src/dspy_meme_gen/services/: __init__.py  concurrency_manager.py  meme_service.py  metadata_collector.py  privacy_service.py
src/dspy_meme_gen/tasks/: __init__.py  privacy_tasks.py  task_pool.py  task_types.py  work_stealing.py
src/dspy_meme_gen/utils/: config.py  image.py  logging.py  mock_lm.py  text.py
tests/: config.py  conftest.py  conftest.py.bak  test_actor_basic.py  test_actor_core.py  test_actor_resilience.py  test_actor_supervision.py  test_api_integration.py  test_appropriateness_agent.py  test_backup.py  test_backup_api.py  test_cache_decorators.py  test_cache_redis.py  test_database_layer.py  test_health.py  test_integration.py  test_middleware_cache.py  test_monitoring.py  test_performance.py  test_real_e2e_integration.py
tests/agents/: test_format_selector.py
tests/chaos/: test_chaos_engineering.py
tests/contracts/: test_service_contracts.py
tests/exceptions/: test_database.py  test_error_handling.py  test_meme_specific.py
tests/fault_injection/: test_fault_injection.py
tests/integration/: test_integration_placeholder.py  test_meme_generation_integration.py
tests/load_testing/: test_load_performance.py
tests/models/: test_db_cli.py  test_models.py  test_repository.py
tests/property_based/: test_actors_hypothesis.py
tests/resilience/: README.md  test_integration_resilience.py
tests/unit/agents/: test_factuality.py  test_image_renderer.py  test_prompt_generator.py  test_router.py  test_scorer.py
tests/utils/: load.py  mocks.py  performance.py
(+45 files in other folders)
